--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link href="./styles/style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Excursion</title>
 </head>
 <body>
     <header>
@@ -13,7 +13,26 @@
     </header>
 
     <main>
-        <a href="#">Dowload Excursion (Coming soon!)</a>
+        <section class="reference">
+            <a href="#">Dowload Excursion (Coming soon!)</a>
+        </section>
+
+        <section class="video-phone">
+            <video src="../excursion/media/excursion.mp4" controls>Sorry, your browser doesn't support embedded videos</video>
+        </section>
+
+        <section class="info">
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="../excursion/media/camp.webp"><br>
+            <img class="icon-phone" src="../excursion/media/phone.webp">
+            <h2>Coming Soon for iPhone and Android</h2>
+            <a href="#">Dowload Excursion (Coming soon!)</a>
+        </section>
     </main>
+
+    <footer>
+        <p>&#169; Excursion</p>
+    </footer>
 </body>
 </html>
