--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </section>
 
         <section class="video-phone">
-            <video src="../excursion/media/excursion.mp4" controls>Sorry, your browser doesn't support embedded videos</video>
+            <video autoplay muted loop ><source src="../excursion/media/excursion.mp4"></video>
         </section>
 
         <section class="info">
